# gitsu

./: .gitignore  .worktreeinclude  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.config/: wt.toml
docs/: ARCHITECTURE.md  CONVENTIONS.md  DESIGN.md  IPC.md  WORKTRUNK_INTEGRATION.md
scripts/: download-wt.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  error.rs  ipc.rs  lib.rs  main.rs  pty.rs  store.rs  watcher.rs
src-tauri/src/git/: blame.rs  checkout.rs  conflict.rs  diff.rs  graph.rs  merge.rs  mod.rs  ops.rs  stage.rs  status.rs
src-tauri/src/hooks/: mod.rs
src-tauri/src/worktrunk/: commands.rs  mod.rs  sidecar.rs  types.rs
ui/src/: App.tsx
ui/src/components/commit/: CommitComposer.tsx  CommitHeader.tsx  CommitInspect.tsx  CommitPanel.tsx  ComposerFileRow.tsx  ComposerGroup.tsx  (+6 more)
ui/src/hooks/: useGlobalHotkeys.ts  useStagingSync.ts  useTerminalActions.ts
ui/src/lib/: code-languages.test.ts  code-languages.ts  code-theme.ts  conflict-decorations.test.ts  conflict-decorations.ts  dag.test.ts  dag.ts  diff.test.ts  diff.ts  errors.test.ts  errors.ts  format.test.ts  format.ts  highlight.test.ts  highlight.ts  tauri.ts  terminal-layout.test.ts  terminal-layout.ts  types.ts  worktree.ts
ui/src/stores/: directory.ts  fileViewer.ts  graph.ts  hooks.ts  merge.ts  prefs.ts  repo.ts  staging.ts  terminal.ts
ui/src/styles/: globals.css
(+58 files in other folders)
